@startuml

!include ./_commons.style



package uutf {

  abstract class Test
  abstract class TestCase
  abstract class SingleTestCase
  abstract class TestSuite
  Test <|-- TestCase
  TestCase <|-- SingleTestCase
  Test <|-- TestSuite
  Test . TestRunner
  class TestRunner

}

package tests {

  class AddTwoNumbers {
    # setUp()
    # test()
  }

  class IntegerTests {
    + {static} build(): Test
    __
    + setUp()
    + addTwoNumers()
    + subtractTwoNumbers()
    + throwAnError()
  }


}

SingleTestCase <|-- AddTwoNumbers

TestCase <|-- IntegerTests

class Main {
  + {static} main(String[])
}


IntegerTests . Main
TestRunner . Main


@enduml
